# intercom

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLE.md  appveyor.yml  azure-pipelines.yml  circle.yml  rustfmt.toml
.circleci/: config.yml
com_utils/: Cargo.toml
com_utils/src/: idl.rs  main.rs  manifest.rs  parse.rs
intercom/: Cargo.toml
intercom-attributes/: .gitignore  Cargo.toml
intercom-attributes/src/: lib.rs
intercom-attributes/tests/: lib.rs
intercom-attributes/tests/data/: .gitattributes  com_impl.source.rs  com_impl.target.rs  com_interface.source.rs  com_interface.target.rs  com_library.source.rs  com_library.target.rs  private_item.source.rs  private_item.target.rs
intercom-attributes/tests/data/macro/: com_impl.rs  com_impl.rs.stdout  com_interface.rs.skip  com_interface.rs.stdout  com_library-hooks.rs  com_library-hooks.rs.stdout  com_library.rs  com_library.rs.stdout  private_item.rs  private_item.rs.stdout
intercom-attributes/tests/data/run/: basic-logging.rs  basic-logging.rs.stdout  confirm-run-tests.rs  confirm-run-tests.rs.stderr  confirm-run-tests.rs.stdout  generic-coclass.rs  generic-coclass.rs.stdout
intercom-build/: Cargo.toml
intercom-build/src/: host.rs  lib.rs
intercom-build/src/os/: mod.rs
intercom-cli/: Cargo.toml
intercom-cli/src/: embed.rs  main.rs  typelib.rs
intercom-cli/src/embed/: setup_configuration.rs
intercom-cli/src/generators/: cpp.rs  cpp_header.hbs  cpp_source.hbs  idl.hbs  idl.rs  mod.rs
intercom-common/: Cargo.toml
intercom-common/src/: ast_converters.rs  attributes.rs  builtin_model.rs  error.rs  foreign_ty.rs  guid.rs  idents.rs  lib.rs  methodinfo.rs  model.rs  paramhandlers.rs  prelude.rs  returnhandlers.rs  tyhandlers.rs  type_parser.rs  utils.rs
intercom-common/src/attributes/: clsid.rs  com_class.rs  com_impl.rs  com_interface.rs  com_library.rs  com_struct.rs  common.rs  mod.rs  type_info.rs
intercom-common/src/generators/: cpp.rs  cpp_header.hbs  cpp_source.hbs  idl.hbs  idl.rs  manifest.hbs  manifest.rs  mod.rs
intercom-common/src/model/: clsid.rs  com_class.rs  com_crate.rs  com_impl.rs  com_interface.rs  com_library.rs  comclass.rs  comcrate.rs  comimpl.rs  cominterface.rs  comlibrary.rs  commodel.rs  common.rs  comsignature.rs  comstruct.rs  macros.rs  mod.rs
intercom-common/tests/: parse_tests.rs  test_generators.rs
intercom-common/tests/generators/: test_lib.idl  test_lib.manifest
intercom-common/tests/multi_file_lib/: Cargo.toml
intercom-common/tests/single_file_lib/: Cargo.toml
intercom-fmt/: Cargo.toml
intercom-fmt/src/: main.rs
intercom-utils/: Cargo.toml
intercom-utils/src/: cpp.rs  error.rs  idl.rs  lib.rs  main.rs  manifest.rs  parse.rs
intercom-utils/src/cpp/: header.rs  implementation.rs  mod.rs
intercom/benches/: logging.rs
intercom/src/: alloc.rs  attributes.rs  bstr.rs  classfactory.rs  combox.rs  comitf.rs  comrc.rs  error.rs  guid.rs  interfaces.rs  lib.rs  logging.rs  prelude.rs  registry.rs  runtime.rs  serialization.rs  strings.rs  type_system.rs  typelib.rs  variant.rs
intercom/src/generators/: cpp.rs  cpp_header.hbs  cpp_source.hbs  idl.hbs  idl.rs  manifest.hbs  manifest.rs  mod.rs
intercom/src/typelib/: from_impls.rs  mod.rs
intercom/tests/: lib.rs
intercom/tests/generators/: test_lib.cpp.cpp  test_lib.cpp.h  test_lib.rs
intercom_attributes/: Cargo.toml
intercom_attributes/src/: lib.rs
samples/thumbnail_provider/: Cargo.toml  README.md  association.reg
samples/thumbnail_provider/src/: lib.rs
test/: CMakeLists.txt  Cargo.toml  SConstruct
test/calculator/: Cargo.toml
test/calculator/src/: lib.rs
test/cpp/: TestLib_h.h  TestLib_i.c  cpp.vcxproj  cpp.vcxproj.filters  interface_params.cpp  iunknown.cpp  primitive_tests.cpp  result.cpp  return_interfaces.cpp  stateful.cpp
test/cpp-dl/: .gitignore  CMakeLists.txt  libraries.h  libraries.hpp  main.cpp  shared_functions.cpp  testlib.h
test/cpp-raw/: .gitignore  CMakeLists.txt  alloc.cpp  error_info.cpp  exceptions.cpp  interface_params.cpp  interface_wrappers.cpp  iunknown.cpp  main.cpp  nullable_parameters.cpp  only_interface.cpp  os.h  output_memory.cpp  parameter_order.cpp  primitive_tests.cpp  result.cpp  return_interfaces.cpp  stateful.cpp  strings.cpp  structs.cpp  testlib.h  testlib.hpp  type_system_callbacks.cpp  variant.cpp
test/cpp-raw/gcc/: TestLib_h.h  TestLib_i.cpp  os.cpp  test_lib.cpp  test_lib.h
test/cpp-raw/msvc/: .gitignore  cpp.vcxproj  import.h  os.cpp
test/cpp-raw/utility/: dummy_interface.cpp  dummy_interface.h
test/cpp-utility/: .gitignore  CMakeLists.txt  dummy_interface.cpp  dummy_interface.h  dummy_interface.hpp  os.h  os.hpp
test/cpp-utility/gcc/: os.cpp  test_lib.hpp
test/cpp-utility/msvc/: os.cpp
test/cpp-utility/posix/: os.cpp
test/cpp-wrapper/: CMakeLists.txt  exceptions.cpp  interface_wrappers.cpp  main.cpp  strings.cpp  testlib.h  testlib.hpp
test/cs/: ErrorInfoSupport.cs  InterfaceValueOperations.cs  PrimitiveOperations.cs  PrimitiveTests.cs  Program.cs  ResultOperations.cs  SetUpFixture.cs  StatefulOperations.cs  VariantTests.cs  calculator.tlb  cs.csproj  cs.exe.manifest
test/msvs/cpp/: TestLib_i.c  cpp.vcxproj  cpp.vcxproj.filters  error_info.cpp  main.cpp  result.cpp  stateful.cpp  stdafx.cpp  stdafx.h
test/msvs/cs/: .gitignore  PrimitiveOperations.cs  ResultOperations.cs  SetUpFixture.cs  cs.csproj  cs.sln
test/multilib/: CMakeLists.txt  Cargo.toml  build.rs
test/multilib/src/: lib.rs
test/perf/: Cargo.toml
test/perf/src/: main.rs
test/runpath/: CMakeLists.txt  init.c  init.h
test/rust-cmake/: CMakeLists.txt
test/testlib/: .gitignore  CMakeLists.txt  Cargo.toml  TestLib.Assembly.manifest  build.rs  calculator.idl  testlib.idl
test/testlib/src/: alloc.rs  error_info.rs  interface_params.rs  lib.rs  nullable_parameters.rs  output_memory.rs  parameter_order.rs  primitive.rs  result.rs  return_interfaces.rs  stateful.rs  strings.rs  struct_parameters.rs  type_system_callbacks.rs  unicode.rs  variant.rs
(+164 files in other folders)
