[package]
name = "intercom-attributes"
version = "0.2.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[lib]
name = "intercom_attributes"
proc-macro = true

[dependencies]
intercom-common = { version = "0.2.0", path = "../intercom-common" }
syn = { version = "0.12", features = [ "full" ] }
quote = { version = "0.4" }

[dev-dependencies]
difference = "1.0.0"
rustfmt-nightly = "0.8"
regex = "0.2"
