[package]
name = "intercom-attributes"
version = "0.2.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[lib]
name = "intercom_attributes"
proc-macro = true

[dependencies]
intercom-common = { version = "0.2.0", path = "../intercom-common" }
syn = { version = "0.15", features = [ "full" ] }
quote = { version = "0.6" }

[dev-dependencies]
difference = "2"
term = "0.5"
intercom-fmt = { version = "0.1.0", path = "../intercom-fmt" }
intercom = { version = "0.2.0", path = "../intercom" }
regex = "0.2"
