[package]
name = "intercom-attributes"
version = "0.3.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[lib]
name = "intercom_attributes"
proc-macro = true

[dependencies]
intercom-common = { version = "0.3", path = "../intercom-common" }
syn = { version = "1.0", features = [ "full" ] }
quote = { version = "1.0" }

[dev-dependencies]
difference = "2"
term = "0.5"
intercom-fmt = { version = "0.3.0", path = "../intercom-fmt" }
intercom = { version = "0.3", path = "../intercom" }
regex = "0.2"
log = "0.4"
simple_logger = { version = "1.6", default-features = false }
