[package]
name = "intercom-cli"
version = "0.3.0"
edition = "2018"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]

[dependencies]
intercom = { path = "../intercom", version = "0.3" }
clap = { version = "2.27.1", default-features = false }
serde = "*"
serde_derive = "*"
failure = "0.1"
libloading = "0.5"
handlebars = "*"
glob = "*"
winapi = { version = "0.3", features = [ "winreg", "winbase" ] }

