[package]
name = "intercom-cli"
version = "0.3.0"
edition = "2018"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]

[dependencies]
intercom = { path = "../intercom", version = "0.3" }
clap = { version = "2.27.1", default-features = false }
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
libloading = "0.5"
handlebars = "2.0"
glob = "0.3"
winapi = { version = "0.3", features = [ "winreg", "winbase" ] }
env_logger = "0.7"
