[package]
name = "intercom-common"
version = "0.2.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[dependencies]
syn = { version = "0.14", features = [ "full", "extra-traits", "parsing" ] }
quote = { version = "0.6" }
proc-macro2 = "0.4"
sha1 = "0.3.0"
ordermap = "0.3"
toml = "0.4.5"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
handlebars = "0.29"

[dev-dependencies]
difference = "1.0.0"
