[package]
name = "intercom-common"
version = "0.3.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[dependencies]
failure = "0.1"
handlebars = "2.0"
indexmap = "1.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_derive = "1.0"
sha1 = "0.6.0"
syn = { version = "1.0", features = [ "full", "extra-traits", "parsing" ] }
toml = "0.5"

[dev-dependencies]
difference = "1.0.0"
