[package]
name = "intercom-common"
version = "0.3.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[dependencies]
failure = "0.1"
indexmap = "1.2"
proc-macro2 = "1.0"
quote = "1.0"
sha1 = "0.6.0"
syn = { version = "1.0", features = [ "full", "extra-traits", "parsing" ] }

[dev-dependencies]
difference = "1.0.0"
