[package]
name = "intercom-fmt"
version = "0.4.0"
authors = ["Juha Lepola <fluxie@fluxie.fi>"]
description = "Formats Rust code with \"rustfmt\""

[dependencies]
intercom-common = { path = "../intercom-common", version = "0.4" }
clap = { version = "2.27.1", default-features = false }
failure = "0.1"
