[package]
name = "intercom-utils"
version = "0.2.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "See 'intercom'"

[dependencies]
syn = { version = "0.11", features = [ "full" ] }
clap = { version = "2.27.1", default-features = false }
glob = "0.2.11"
if_chain = "0.1.2"
intercom-common = { version = "0.2.0", path = "../intercom-common" }
toml = "0.4.5"
