[package]
name = "intercom"
version = "0.2.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
repository = "https://github.com/Rantanen/intercom"
description = "Utilities for writing COM visible Rust components."

[badges]
appveyor = { repository = "Rantanen/intercom", branch = "master", service = "github" }
travis = { repository = "Rantanen/intercom", branch = "master" }
codecov = { repository = "Rantanen/intercom", branch = "master", service = "github" }

[lib]
name = "intercom"

[dependencies]
intercom-attributes = { version = "0.2", path = "../intercom-attributes" }
intercom-common = { version = "0.2", path = "../intercom-common", optional = true }

failure = "0.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
handlebars = { version = "0.29", optional = true }

[features]
default = []
generators = [ "serde", "serde_derive", "intercom-common", "handlebars" ]
