[package]
name = "intercom"
version = "0.4.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/Rantanen/intercom"
description = "Utilities for writing COM visible Rust components."

[lib]
name = "intercom"

[dependencies]
intercom-attributes = { version = "0.4", path = "../intercom-attributes" }
failure = "0.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
handlebars = { version = "2.0", optional = true }
log = { version = "0.4" }

[dev-dependencies]
simple_logger = { version = "1.6", default-features = false }
regex = "1.5"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

