[package]
name = "intercom_attributes"
version = "0.1.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]

[lib]
name = "intercom_attributes"
proc-macro = true

[dependencies]
intercom_common = { path = "../intercom_common" }
syn = { version = "0.11", features = [ "full" ] }
quote = { version = "0.3" }
